--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ header{
   align-items:center;
   justify-content:center;
   overflow:hidden;
-  background:linear-gradient(180deg, rgba(121, 115, 115, 0.473), rgba(212, 15, 15, 0.06));
+  background:linear-gradient(180deg, rgb(255, 255, 255), rgb(255, 255, 255));
 }
 .product_img img{width:100%;height:100%;object-fit:cover;display:block}
 
